    ncurses.
  * Add an empty debian/watch file explaining that there's no packaged
    upstream releases. Suggested by Peter Pentchev.
  * Update CVS to Subversion reference to upstream source code in
    debian/copyright.

  [ Peter Pentchev ]
  * Remove duplicate section “utils” from ufsutils binary package.
  * Remove XC- prefix from Package-Type.

 -- Robert Millan <rmh@debian.org>  Thu, 27 Jan 2011 16:22:17 +0100

ufsutils (7.3-1) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_7_3_0_RELEASE)
  * Use intmax_t cast in fsbtodb() to fix aborts when
    making a filesystem larger than one terabyte. Closes: #559647.

  [ Aurelien Jarno ]
  * Bump Standard-Versions to 3.8.4 (no changes).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 13 Apr 2010 22:20:32 +0200

ufsutils (7.2-3) unstable; urgency=low

  * Drop patches/04_sysctlnametomib.patch and replace it by a build-depends
    on libc0.1-dev (>= 2.10.1).
  * Add a README.source file.
  * Bump Standard-Versions to 3.8.3.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 24 Oct 2009 18:27:16 +0200

ufsutils (7.2-2) unstable; urgency=low

  * Remove the warning in the package's description about the fact it is an
    experimental package.
  * Remove the libufs2 library and link statically instead. It is small, not
    really usable, and anyway comes without -dev package.
  * Add patches/04_sysctlnametomib.patch to avoid linking with libfreebsd.
  * Bump Standard-Versions to 3.8.2 (no changes).
  * Add a ufsutils-udeb.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jul 2009 15:28:23 +0200

ufsutils (7.2-1) unstable; urgency=low

  [ Guillem Jover ]
  * Use $(filter ...) instead of $(findstring ...) to extract space separated
    options from DEB_BUILD_OPTIONS in debian/rules.
  * Remove commented out lines in debian/rules.
  * Do not set unused INSTALL_PROGRAM.
  * Line wrap Build-Depends fields for lines longer than 80 chars.
  * Use asterisks for bulleted lists in package description.