@@ -27,6 +27,7 @@ ufsutils (7.3-2) UNRELEASED; urgency=low
   [ Peter Pentchev ]
   * Remove duplicate section “utils” from ufsutils binary package.
   * Remove XC- prefix from Package-Type.
+  * Honour CPPFLAGS and LDFLAGS and do not link with CFLAGS.
 
  -- Robert Millan <rmh@debian.org>  Thu, 27 Jan 2011 16:22:17 +0100
 
